# GRAPPLE

./: LICENSE  README.md  environment.yml  requirements.txt
GRAPPLE/: README.md  ablation_study.py  batch_ablation_study.py  batch_rank_experiment.py  batch_sensitivity_analysis.py  environment.yml  full_supervised_baseline.py  main.py  official_patched_ssl_baseline.py  plot_distortion_comparison.py  pygcl_ssl_baseline.py  pyproject.toml  rank_collapse_experiment.py  rank_collapse_viz.py  requirements.txt  riemannian_supervised_baseline.py  sampled_ogb_experiment.py  sampled_supervised_baseline.py  sensitivity_analysis.py  ssl_adapter_experiment.py
GRAPPLE/experiments/: ogbn_arxiv_sanity_check.py  plot_embedding_comparison_with_prototypes.py  plot_umap_tsne_prototypes.py  prototype_usage_analysis.py  run_classifier_head_comparison.py  run_main_experiments.py  run_paper_completion_experiments.py  run_target_ablation.py
GRAPPLE/grapple/: experiment_utils.py
GRAPPLE/grapple/models/: __init__.py  grapple.py
GRAPPLE/scripts/: make_analysis_figures.py  make_grapple_paper_figures.py  redraw_grapple_tsne_comparison.py
grapple/: __init__.py  data.py  trainer.py
grapple/models/: __init__.py  gcn.py  stereographic.py
